--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "antikernel-ipcores"]
 	path = antikernel-ipcores
 	url = ../antikernel-ipcores.git
+[submodule "embedded-cli"]
+	path = embedded-cli
+	url = ../embedded-cli.git
+[submodule "stm32-cpp"]
+	path = stm32-cpp
+	url = ../stm32-cpp.git
